Fix z-index of top menu. Makes clicking on top menu not propagate down to canvas.

--- a/css/play.css
+++ b/css/play.css
@@ -5,6 +5,7 @@
   left: 0;
   padding: 5px;
   width: calc(100% - 10px);
+  z-index: 10;
 
   background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
